--- a/public/src/styles/personal.scss
+++ b/public/src/styles/personal.scss
@@ -44,6 +44,10 @@
           display: flex;
           flex-direction: column;
           margin-left: 20px;
+
+          br {
+            display: none;
+          }
         }
       }
 
